<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ironRiders.scout4180.activities.TeamActivity">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/teamActivityButtonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/teamActivityChangePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_activity_change_picture_button_text"/>
            <Button
                android:id="@+id/teamActivityViewPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_activity_view_picture_button_text"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/teamActivityPitNotesContainer"
            android:layout_below="@id/teamActivityButtonContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <TextView
                android:id="@+id/teamActivityPitNotesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:text="@string/team_activity_pit_notes_text"/>
            <CheckBox
                android:id="@+id/teamActivityCheckedTextViewBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamActivityPitNotesText"
                android:text="@string/team_activity_checked_text_stacks_bin"/>
            <CheckBox
                android:id="@+id/teamActivityCheckedTextViewTote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamActivityCheckedTextViewBin"
                android:text="@string/team_activity_checked_text_stacks_totes"/>
            <CheckBox
                android:id="@+id/teamActivityCheckedTextViewAvoidsNoodles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamActivityCheckedTextViewTote"
                android:text="@string/team_activity_checked_text_avoids_noodles"/>
            <CheckBox
                android:id="@+id/teamActivityCheckedTextViewManipulatesNoodles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamActivityCheckedTextViewAvoidsNoodles"
                android:text="@string/team_activity_checked_text_manipulates_noodles"/>
            <CheckBox
                android:id="@+id/teamActivityCheckedTextViewOmniWheels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamActivityCheckedTextViewManipulatesNoodles"
                android:text="@string/team_activity_checked_text_omni_wheels"/>
            <CheckBox
                android:id="@+id/teamActivityCheckedTextViewOverSlope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamActivityCheckedTextViewOmniWheels"
                android:text="@string/team_activity_checked_text_drive_over_slope"/>
            <CheckBox
                android:id="@+id/teamActivityCheckedTextBalanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamActivityCheckedTextViewOverSlope"
                android:text="@string/team_activity_checked_text_drive_over_slope"/>
            <EditText
                android:id="@+id/teamActivityEditTextAdditionalFunctions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamActivityCheckedTextBalanced"
                android:hint="@string/team_activity_edit_text_additional_functions_hint"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
