<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ironRiders.scout4180.activities.HomeActivity" >

    <ImageView
        android:id="@+id/homeActivityTitleImage"
        android:src="@drawable/title_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/home_activity_image_top_margin"
        android:layout_marginBottom="@dimen/home_activity_image_bottom_margin"
        android:contentDescription="@string/home_activity_title_image_description"/>

    <LinearLayout
        android:id="@+id/homeActivityContainerSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeActivityTitleImage"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/homeActivityTeamSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_activity_search_button_text"
            android:onClick="toTeamActivity"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeActivityContainsNewMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/homeActivityContainerSearch"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/homeActivityNewMatchTeamNumberTeamEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/home_activity_team_number_edit_text_hint"/>
        <EditText
            android:id="@+id/homeActivityNewMatchMatchNumberEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/home_activity_match_number_hint"/>
        <Button
            android:id="@+id/homeActivityAddMatchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_activity_new_match_button_text"
            android:onClick="toMatchActivity"/>
    </LinearLayout>"


</RelativeLayout>
