<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="team4180.ironriders.investigator2015.AutonomousFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/AutonomousTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="Autonomous" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/AutonomousTitle"
            android:background="#45F005"
            android:padding="@dimen/box_horizontal_padding"
            android:layout_marginLeft="@dimen/action_group_horizontal_margin"
            android:layout_marginRight="@dimen/action_group_horizontal_margin">
            <LinearLayout
                android:id="@+id/ActionGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/action_group_horizontal_margin"
                android:layout_marginRight="@dimen/action_group_horizontal_margin">
                <Button
                    android:id="@+id/Button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_one_text"/>
                <Button
                    android:id="@+id/CheckBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/Button1"
                    android:text="@string/button_two_text"
                    />
                </LinearLayout>
            <LinearLayout
                android:id="@+id/ActionGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toRightOf="@id/ActionGroup1"
                android:layout_marginLeft="@dimen/action_group_horizontal_margin"
                android:layout_marginRight="@dimen/action_group_horizontal_margin">
                <Button
                    android:id="@+id/Button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_three_text"
                    />
                <Button
                    android:id="@+id/CheckBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/Button2"
                    android:text="@string/button_four_text"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ActionGroup3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ActionGroup2"
                android:layout_marginLeft="@dimen/action_group_horizontal_margin"
                android:layout_marginRight="@dimen/action_group_horizontal_margin">
                <Button
                    android:id="@+id/Button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_five_text"/>
                <Button
                    android:id="@+id/CheckBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/Button3"
                    android:text="@string/button_six_text"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ActionGroup4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ActionGroup3"
                android:layout_marginLeft="@dimen/action_group_horizontal_margin"
                android:layout_marginRight="@dimen/action_group_horizontal_margin">
                <Button
                    android:id="@+id/Button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_seven_text"
                    />
                <Button
                    android:id="@+id/CheckBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/Button4"
                    android:text="@string/button_eight_text"
                    />
            </LinearLayout>

            </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
